Fix toc responsivity on safari

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -140,3 +140,7 @@ body {
     box-shadow: $shadow-medium, $shadow-small;
   }
 }
+.sv-components-container-rigth,
+.sv-components-container-left {
+  width: fit-content;
+}
